# suhjong-wasm

./: .gitignore  Cargo.toml  index.html  index.xml
.github/workflows/: hugo.yml
categories/: index.xml
docs/: index.html
docs/css/: skeleton.css
example/: README.md  config.toml  required_chars.py
example/assets/: script.js  script.ts  style.scss
example/layouts/: index.html
example/static/pkg/: README.md  package.json  suhjong_wasm.d.ts  suhjong_wasm.js
pkg/: suhjong_wasm_bg.wasm  suhjong_wasm_bg.wasm.d.ts
src/: lib.rs
tags/: index.xml
