[package]
name = "suhjong-wasm"
version = "0.1.0"
edition = "2021"
description = "数雀文字列を扱うcrate: suhjong のwasmバージョンです"
license = "MIT"
wasm-opt = false
# repository = "git@github.com:gw31415/suhjong-wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.suhjong]
git = "https://github.com/gw31415/suhjong-rs"

[dependencies.wee_alloc]
version = "0.4.5"
optional = true

[dependencies]
wasm-bindgen = "0.2.81"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]
